Changelog for Writer2xhtml version 1.6.1 -> 1.7 beta

All changes are classified as
- New feature: New functionality has been added to the extension
- Improved: A feature was changed to work better than in the previous version
- Bugfix: A bug in the previous version was fixed
- Changed: Something has changed due to a design decision

---------- version 1.7 ----------

- Improvement: Export of list formatting is now using modern CSS features like counters.

- Changed: The option list_formatting now supports the values ignore_all (do not export list formatting),
  convert_labels (only convert the labels, not indentations), convert_all (convert all list formatting).
  The old values css1, css1_hack and hard_labels have been removed.  

- Bugfix: Fix crash in Calc export when last row/column in view is hidden

- Improvement: No longer uses deprecated Java constructions

- Improvement: Pretty printing now works better with spreadsheets.

- Bugfix: The option use_mathjax now works correctly with TeXMaths equations. Also TeXMaths equations are now always
  typeset in inline mode.

- Bugfix: The converter now always uses the current page layout when calculating relative widths. Previously the first
  page layout in the document was used, which caused miscalculations if page layout changes in the document.

---------- version 1.7 beta ----------

- Bugfix: The converter no longer crashes on spreadsheets with diagrams.

- New feature: New boolean option original_page_numbers. If this option is set to true, the original page numbers will
  be included in EPUB export. This feature is currently experimental.

- Improved: The EPUB filter dialog has been extended to support the options table_size (previously only available in
  the custom configuration settings), units (replacing convert_to_px) and the new option original_page_numbers.

- Changed: The configuration file cleanxhtml.xml no longer sets custom_stylesheet.
